# nbody

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README  README.md
include/: body.h  cluster.h  err.h  galaxy.h  nbody.h  nbody_vk.h  quadtree.h  rag.h  rag_vk.h  v2.h  world.h
src/: CMakeLists.txt  bench.c  body.c  cluster.c  cluster.h  main.c  quadtree.c  renderer.c  renderer.h  vk.c  vk_playground.c  world.c
src/lib/: CMakeLists.txt  body.c  body.h  cluster.c  fio.c  fio.h  galaxy.c  particle_pack.c  particle_pack.h  quadtree.c  quadtree.h  sim_cpu.c  sim_cpu.h  sim_gpu.c  sim_gpu.h  util.h  vk.c  vk_ctx.c  vulkan_ctx.c  vulkan_ctx.h  world.c  world_cpu.c  world_gpu.c  world_gpu.h  world_vk.c  world_vk.h
src/shader/: CMakeLists.txt  body_common_cs.glsl  body_cs.glsl  body_grav_cs.glsl  body_move_cs.glsl  common.glsl  grav.comp  move.comp  particle.cs.glsl  particle.fs.glsl  particle.gs.glsl  particle.vs.glsl  particle_cs.glsl  particle_fs.glsl  particle_vs.glsl
test/: CMakeLists.txt  test_body.c  test_particle_sort.c  test_quadtree.c  test_v2.c  test_world.c
