cmake_minimum_required(VERSION 3.20)
project(nbody C)

set(SIMD_SET "AVX" CACHE STRING "Which SIMD instruction set to use: AVX, SSE or none")
option(USE_EXTERNAL_GLFW "Use external GLFW library instead of building it from source" OFF)

if (MSVC)
    set(nbody_compiler_flags /W4)
else()
    set(nbody_compiler_flags -Wall -Wextra)
    if (CMAKE_BUILD_TYPE STREQUAL Debug)
        set(sanitize_flags -fsanitize=undefined)
        set(nbody_compiler_flags ${nbody_compiler_flags} ${sanitize_flags})
        set(nbody_linker_flags ${nbody_linker_flags} ${sanitize_flags})
    endif()
endif()

add_subdirectory(deps)
add_subdirectory(src)
add_subdirectory(test)
